Closed
Bug 230998
Opened 21 years ago
Closed 21 years ago
[FIX]crash if I'm opening file upload after I submit form.
Categories
(Core :: Layout: Form Controls, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla1.7alpha
People
(Reporter: volod_0x16, Assigned: bzbarsky)
References
Details
(Keywords: crash)
Attachments
(1 file)
1.99 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.5) Gecko/20031007
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.5) Gecko/20031007
Mozilla crashes if I submit form and before the page is updated I press
"Browse..." button to upload file. After the page updated (file upload window is
still open), file is selected and open button is press mozilla crashes.
Reproducible: Always
Steps to Reproduce:
1. need a form with file upload input (<input type="file">)
2. submit form and press "Browse..." button (before the page is updated)
3. after the page is refreshed press "Open" button
Actual Results:
browser crashes
Summary: crash if I'm opening file upload after I submit form. → crash if I'm opening file upload after I submit form.
Comment 1•21 years ago
|
||
*** Bug 230997 has been marked as a duplicate of this bug. ***
Comment 2•21 years ago
|
||
wfm current cvs trunk build
Reporter: Maybe you can try with the current 1.6 release?
![]() |
Assignee | |
Comment 3•21 years ago
|
||
> wfm current cvs trunk build
On Linux? 'cause I can sure reproduce on Linux with a current trunk build...
Assignee: general → nobody
Status: UNCONFIRMED → NEW
Component: Browser-General → Layout: Form Controls
Ever confirmed: true
QA Contact: general → core.layout.form-controls
![]() |
Assignee | |
Comment 4•21 years ago
|
||
The crash happens because mTextFrame is 0xdddddddd
Assignee: nobody → bz-vacation
Priority: -- → P1
Target Milestone: --- → mozilla1.7alpha
![]() |
Assignee | |
Comment 5•21 years ago
|
||
This makes us not crash.
The right behavior, imo, is to take the filepicker down when the page
transition happens, but I see no way to do this via the filepicker
interfaces... We should probably have a general "take this down if the page
transitions" flag on windows (eg find dialogs, filepickers, etc).
![]() |
Assignee | |
Comment 6•21 years ago
|
||
Comment on attachment 139295 [details] [diff] [review]
Patch
David, would you review?
Attachment #139295 -
Flags: superreview?(dbaron)
Attachment #139295 -
Flags: review?(dbaron)
![]() |
Assignee | |
Updated•21 years ago
|
Summary: crash if I'm opening file upload after I submit form. → [FIX]crash if I'm opening file upload after I submit form.
Comment on attachment 139295 [details] [diff] [review]
Patch
Sure, but move the "Set property" comment back to where it was (below the
inserted code).
Attachment #139295 -
Flags: superreview?(dbaron)
Attachment #139295 -
Flags: superreview+
Attachment #139295 -
Flags: review?(dbaron)
Attachment #139295 -
Flags: review+
![]() |
Assignee | |
Comment 8•21 years ago
|
||
Checked in. volod, thanks for the bug report!
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 9•21 years ago
|
||
ok that was on Windows where i tried it, should have added this; anyway glad
this is fixed now :)
![]() |
Assignee | |
Comment 10•21 years ago
|
||
*** Bug 235359 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•