Don't crash if the file input's frame is destroyed while the filepicker is up. Bug 230998, r+sr=dbaron